# EideticAI

./: .gitignore  README.md  pyproject.toml  thesis_proposal2.bcf  thesis_proposal2.run.xml
eidetic_ai/ascedant_k/: critic.py
eidetic_ai/c3/: causal_graph.py  student_model.py
eidetic_ai/hal/: abstactions.py  critics.py
eidetic_ai/memory/: graph.py
eidetic_ai/progs/: dsl.py  program_synthesis.py
eidetic_ai/qce/models/: trained_policy.pth
notebooks/: 00_verify_environment.py  01_qce_prototype_run.py  02_ascedant_k_simulation.py  03_qualitative_validation.py  04_hal_framework_dev.py  05_c3_framework_dev.py  06_progs_popgen_dev.py
paper/: references.bib  thesis_proposal.bcf  thesis_proposal.lof  thesis_proposal.lot  thesis_proposal.run.xml  thesis_proposal.tex  thesis_proposal.toc  thesis_proposal2.tex
src/eidetic_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/inference/: 01_local_model_test.py
src/qce/: hc.py  solver.py
