[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eidetic_ai"
version = "0.1.0"
authors = [
  { name="Mohan RD", email="mohan.rangan.research@gmail.com" },
]
description = "Eidetic AI Research Package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mythogenesys/EideticAI"
Issues = "https://github.com/mythogenesys/EideticAI/issues"